# api2spec-fixture-rocket

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  openapi.yaml
src/: lib.rs  main.rs
tests/: integration_tests.rs
